Listing2_9 タイトルの左側にアイコンを付ける（アイコン表示されない）

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':listing2_5', ':listing2_6', ':listing2_7', ':listing2_8'
+include ':app', ':listing2_5', ':listing2_6', ':listing2_7', ':listing2_8', ':listing2_9'
